# self-deploy

./: .gitignore  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/common/: exceptions.py  response_schema.py  responses.py
backend/app/controllers/: auth_controller.py  oauth_controller.py
backend/app/core/: config.py  database.py  security.py
backend/app/dependencies/: database.py  repositories.py  services.py
backend/app/models/: user_model.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: auth_schema.py
backend/app/services/: auth_service.py  email_service.py  jwt_service.py  oauth_service.py
backend/app/utils/: otp_generator.py
frontend/: .dockerignore  index.html  package-lock.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: axios.js
frontend/src/components/layouts/: Layout.jsx  MonitorPanel.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/data/: labTypes.js  mockApps.js  mockDomains.js  mockLabs.js
frontend/src/lib/: cls.js
frontend/src/pages/: AppsPage.jsx  DashboradPage.jsx  DomainsPage.jsx  HomePage.jsx  LabsPage.jsx  LoginPage.jsx  MonitoringPage.jsx  OAuthCallbackPage.jsx  ProfilePage.jsx  RegisterPage.jsx  SettingsPage.jsx  VerifyOtpPage.jsx
frontend/src/routes/: AppRouter.jsx  ProtectedRoute.jsx
frontend/src/store/: appStore.js  authStore.js  toastStore.js
frontend/src/styles/: main.css
frontend/src/utils/: auth.js
nginx/: nginx-proxy.conf
(+18 files in other folders)
